lrcall/tests/compile_fail/tarpc_service_derive_serde.stderr
error: expected literal
 --> tests/compile_fail/lrcall_service_derive_serde.rs:1:33
  |
1 | #[lrcall::service(derive_serde = loop {})]
  |                                 ^^^^
